--- a/prod/infra/elasticsearch-fluentd-kibana/kibana.yaml
+++ b/prod/infra/elasticsearch-fluentd-kibana/kibana.yaml
@@ -4,7 +4,7 @@ data:
   kibana.yml: |
     elasticsearch.url: http://elasticsearch-client.elasticsearch.svc.cluster.local:9200
     server.host: "0"
-    server.name: kibana
+    server.name: kibanaZZZZZZZ
 kind: ConfigMap
 metadata:
   labels:
@@ -78,4 +78,3 @@ spec:
       - configMap:
           name: kibana
         name: kibana
-
